--- a/nivel/6/tests/project/internal/store/pgstore/sqlc.yaml
+++ b/nivel/6/tests/project/internal/store/pgstore/sqlc.yaml
@@ -8,5 +8,5 @@ sql:
       go:
         out: "."
         package: "pgstore"
-        sql_package: "pxg/v5"
+        sql_package: "pgx/v5"
         emit_json_tags: true
