fix(project): :bug: corrige o arquivo de configuracao do tern.

--- a/nivel/6/tests/project/internal/store/pgstore/migrations/tern.conf
+++ b/nivel/6/tests/project/internal/store/pgstore/migrations/tern.conf
@@ -1,6 +1,6 @@
 [database]
-host = {{env DATABASE_HOST}}
-port = {{env DATABASE_PORT}}
-user = {{env DATABASE_USER}}
-dbname = {{env DATABASE_NAME}}
-password = {{env DATABASE_PASSWORD}}
+host     = {{ env "DATABASE_HOST" }}
+port     = {{ env "DATABASE_PORT" }}
+user     = {{ env "DATABASE_USER" }}
+password = {{ env "DATABASE_PASSWORD" }}
+database = {{ env "DATABASE_NAME" }}
