--- a/nivel/6/tests/project/internal/store/pgstore/sqlc.yaml
+++ b/nivel/6/tests/project/internal/store/pgstore/sqlc.yaml
@@ -1,12 +1,12 @@
 version: 2
 
 sql:
-  - engine: "postgresql"
-    schema: "./migrations"
-    queries: "./queries"
+  - engine: postgresql
+    schema: ./migrations
+    queries: ./queries
     gen:
       go:
-        out: "."
-        package: "pgstore"
-        sql_package: "pgx/v5"
+        out: .
+        package: pgstore
+        sql_package: pgx/v5
         emit_json_tags: true
