chore(config): :recycle: ajusta a formatacao de alguns arquivos de configuracao

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,18 @@
 {
   "printWidth": 80,
-  "singleQuote": false
+  "singleQuote": false,
+  "overrides": [
+    {
+      "files": ["*.json", ".prettierrc"],
+      "options": {
+        "tabWidth": 2
+      }
+    },
+    {
+      "files": "*.yaml",
+      "options": {
+        "tabWidth": 2
+      }
+    }
+  ]
 }
